the file of the second module arrays is created

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <!-- <script type="module" src="js/educ.js"></script> -->
   <!-- <script type="module" src="js/examples.js"></script> -->
   <!-- <script type="module" src="js/new-fruits.js"></script> -->
-  <script type="module" src="js/function.js"></script>
+  <!-- <script type="module" src="js/function.js"></script> -->
+  <script src="js/module2-array.js" type="module"></script>
 </html>
