--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- <script type="module" src="js/educ.js"></script> -->
   <!-- <script type="module" src="js/examples.js"></script> -->
   <!-- <script type="module" src="js/new-fruits.js"></script> -->
-  <script type="module" src="js/module2-function.js"></script>
+  <!-- <script type="module" src="js/module2-function.js"></script> -->
+  <script type="module" src="js/module3-objects.js"></script>
   <!-- <script src="js/module2-array.js" type="module"></script> -->
 </html>
