--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <!-- <script type="module" src="js/examples.js"></script> -->
   <!-- <script type="module" src="js/new-fruits.js"></script> -->
   <!-- <script type="module" src="js/module2-function.js"></script> -->
-  <script type="module" src="js/module3-objects.js"></script>
+  <!-- <script type="module" src="js/module3-objects.js"></script> -->
+  <script type="module" src="js/module4-callback.js"></script>
   <!-- <script type="module" src="js/cart.js"></script> -->
   <!-- <script src="js/module2-array.js" type="module"></script> -->
 </html>
